--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,10 @@
 	"homepage" : "https://www.github.com/codeless/logmore",
 	"require" : {
 		"php" : ">=5.2.0"
+	},
+	"autoload" : {
+		"psr-0": {
+			"LogMore": "src"
+		}
 	}
 }
