--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
 	"name" : "codeless/logmore",
 	"description" : "Minimalist logging tool providing wrappers for openlog, closelog and syslog",
+	"license" : "ISC",
 	"keywords" : ["log","logging"],
 	"homepage" : "https://www.github.com/codeless/logmore",
 	"require" : {
